Moving idio culture to end discussion - finding a focus for propagation commentary

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -440,8 +440,6 @@ This section outlines how the use of GDP concepts and supporting tools were used
 
 An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_." [^v3]
 
-
-
 This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6].
 
 Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
@@ -661,69 +659,93 @@ E.g. The use of GDPs to facilitate learners to design for others was present in 
 
 <!-- **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective** -->
 
-### GDPs can facilitate the use of wider repertoires of practice,interest and funds of knowledge
+
+
+### The propagation and evolution of GDPs concepts
+
+<!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
+
+
+
+**Intro**
+The implementation of popular or novel GDPs by participant pairs or individuals often spread through peer activity.
+
+**context?**
+
+In Vignette 1b, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games.
+
+The data shows  examples of organic emergence of novel GDPs and related design concepts  beyond those offered in the menu of supporting documentation.  Tehillah's concept of a kind of bonus level that eschews challenge and offers only rewards explored above emerged through playful experimentation. While this idea exists in popular games, it was experimental and novel for the child. Other participants created extremely challenging or impossible game levels that frustrated other players. The concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach.
+
+
+
+**Commentary**
+
+This section follows logically from the previous one in that designing for others and providing more space for social playtesting within the session then leads to propagating of emerging patterns [^pll].
+
+
+Novel  concepts , became used as lingua franca in the playtesting of that game and that of others with moving enemies. Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
+
+Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
+
+
+They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
+
+**impact of peer learning**
+The preferences shown by some for peer learning and convention breaking became a part of the emerging culture of the game making sessions.
+
+Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
+
+
+
+<!-- Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics. -->
+
+
+<!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
+<!-- NOTE ADD MORE EVIDENCE? -->
+
+<!-- ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2. -->
+
+<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
+
+<!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
+<!-- DEVELOP -->
+<!-- The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies. -->
+
+
+
+
+### GDPs can facilitate the use of wider repertoires of practice, interest and funds of knowledge
 
 <!-- THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT -->
 
-This section outlines some of the ways GDP concepts can facilitate the incorporation of participants interests from outside this learning space, and wider repertoires of practice [^rpp].
-In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
+This section outlines some of the ways GDP concepts can facilitate the incorporation of participants interests from outside this learning space, and wider repertoires of practice [^rpp]. In Chapter 5  I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
 
-To do this, I change the section structure package description and discussion together? DO I?
 
 <!-- ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
 PERHAPS CHANGE THE GRAPHIC TO A TABLE HERE.
 DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS -->
 
+Regarding aesthetics, some participants oriented their game making primarily around the aesthetic appeal of their projects. Madiha(p) in the vignette extract above showing identification, as an "expert pixel", with the graphical-making process. Many examples of session data  show an orientation towards graphical design of the visual elements of their games preference for both Madiha and her daughter Nasrin. Supporting interview data with the family confirms that art is shared an interest that they both pursue in their home activities[^mn]. The process of bringing that aspect of creativity into their games allows them to share this artistic orientation and attention to detail with the emerging learning community. In another example, Mark(p) and Ed(c) designed a game around the character of a train driver that needed to collect coal. In interview data Mark describes the impact of Ed feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming."[^hi] Clive and Pearl, the grandparents of Toby, included a narrative message [^cpp] at the start of their game surfacing the interest and expertise of the family as beekeepers in a way that sparked interest and conversations with other participants. I observed that families and individuals who were less intrinsically interested in the gaming at home often engaged with the aesthetics elements of the graphical or audio design or the narrative of the game.
 
-The process of working with the game dynamics has already been addressed in the examples of the previous section.  
-ADD SOME COMMENTARY?
+Jumping to game mechanics,  Bertie(c) makes comments on Toby(c)'s game, which has a dominant game experience of timed jumping: "Berie: It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"[^vrc]  In this interaction, Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics.
 
-Turning to aesthetics, some participants oriented their game making primarily around the aesthetic appeal of their projects. Madiha in the vignette extract above showing identification (as an _expert pixel_) with the graphical-making process. Many examples of session data (see Vignette 5) confirm this preference for both Madiha(p) and her daughter Nasrin(c) and interview data shows that this art is also an interest that they pursue at home. NOW POSSIBLE DUPLICATION WITH ABOVE.
-
-Beyond their internal family interaction, the process of bringing that aspect of creativity into their games allows them to share this artistic flair and attention to detail with the emerging learning community. IS THIS COMMENTARY?
-
-In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In interview data Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." (see Appendix 4.x). Clive(p) and Pearl(p), the grandparents of Toby(c), included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see Vignette 6) in a way that sparked interest and conversations with other participants.
-
-
-
-Jumping to game mechanics, In Vignette 1 (See  - Reflective commentary – Peer propagation and community uptake of GDPs.)  Bertie(c) makes comments on Toby(c)'s game, which has a dominant game experience of timed jumping: "Berie: It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics.
+The process of working with the game dynamics has already been addressed in the examples of the previous section [^gd].  
 
 **Commentary**
 
-The examples above give an overview of how the tacit knowledge of GDPs of both children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+The purpose of structuring the ways in which participants around the MDA typology  is to highlight the potential to structure supporting resources in a way which helps participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020].  At this stage, I do no propose that the MDA framework is particularly suited to this task, rather that providing this supporting framework which visually and intuitively allows learners choice over the way they engage with  the game making process  and express themselves within it has beneficial potential to increase participants inclusion [@capp_effectiveness_2017] [^udl].
 
-The previous examples have outlined varied was that  participants used GDPs in incorporating elements of home funds of knowledge and interest into their games. I observed that families and individuals who were less intrinsically interested in the gaming often engaged with the aesthetics elements of the graphical or audio design or the cast of characters the narrative of the game.
+The examples above give an overview of how participant's tacit knowledge of games and GDPs in particular can be brought into the game making community and used within diverse roles explored in section above, including: providing peer feedback, ideation, and aiding division of labour [@wenger_communities_1998].
 
-In summary, GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community.
+To start the process of discussing these findings in relation to relevant research, it bears resituating research, including: socio-cultural research on the tactical use of home repertoires and funds of knowledge  to address barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro @fasso_identity_2020; @esteban-guitart_funds_2014]; the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003; @sefton-green_mapping_2013; @livingstone_digital_2018]; the ability to make personalised game assets and narratives and sustain engagement in digital making projects and CGD&P in particular [@sefton-green_mapping_2013 @kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980][^pbl].
 
-While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it is limited in the way it addresses aspect of choice when of drawing on home interests.
-
-In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests.
-
-As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020].
-THIS FEELS LIKE DUPLICATION WITH THE ABOVE NOW.
-
-Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
+The contribution of these findings is to locate and address a gap concerning the potential leverage the utility GDPs, and a learning design oriented around that conceptual germ cell, as a mediational strategy to facilitate the incorporation and development of home repertoires into the digital making process [^rep].
 
 
-MOVED DOWN
-Existing research outlines the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003].
 
-Similarly, the ability to make personalised game assets and narratives and sustain engagement in digital making projects [@sefton-green_mapping_2013].
+<!-- In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. -->
 
-Existing constructivist research in CGD&P also highlight the motivating potential of incorporating home interests in games, coding and media projects [@kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980]]
-
-
-Socio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro].
-
-Research related to project based learning (PBL) benefits of working with participants' home interests with project work include to motivate participants in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], sustain activity and overcome problems in order to share the personalised object created [@barron_conceptualizing_2010; @barron_interest_2006-1].
-
-
-<!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapting behaviourser six.
-IS THIS NOW REALLY NEED - OR MOVE TO APPENDIX?   -->
-
-<!-- _Summary_
-LINK TO STATS from coding. -->
 
 <!-- _Funds of knowledge from professional communities_
 
@@ -742,57 +764,6 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 
 
-### The propagation  and evolution of GDPs concepts
-
-<!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
-<!-- NOTE THIS includes NON TEMPLATED GDPs? -->
-
-<!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
-<!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
-
-The implementation of popular or novel GDPs by participant pairs or individuals often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
-
-
-<!-- Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics. -->
-
-
-<!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
-<!-- NOTE ADD MORE EVIDENCE? -->
-
-<!-- ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2. -->
-
-<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
-
-<!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
-<!-- DEVELOP -->
-
-In Vignette 1b, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
-
-Turning to evolution of patterns, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. This novel  concept, became used as lingua franca in the playtesting of that game and that of others with moving enemies. Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
-
-
-The data shows other examples of organic emergence of novel GDPs and related design concepts  beyond those offered in the menu of supporting documentation. Tehillah's concept of a kind of bonus level that eschews challenge and offers only rewards (see Vignette 2) emerged through playful experimentation. While this idea exists in popular games, it was experimental and novel for the child.
-
-DEVELOP THIS OR MOVE
-In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
-
-They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
-
-The preferences shown by some for peer learning and convention breaking became a part of the emerging culture of the game making sessions.
-
-**GDPs as components of emerging repertoires in an evolving idioculture**
-
-The term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], can be applied to the role of GDPs as component parts in the emergence of a community culture.
-
-To help foster an inclusive environment I led by warm up games at the start of sessions in early sessions of phases one two ad there. From phase two onwards I encourages playtesting time in the second half or each session. This playtesting time was open in scope allowed for natural play to emerge. While hard to quantify, phase two and three in particular can be characterised as having a playful and social atmosphere.
-
-Other characteristics and norms of the emerging idioculture stemming which stem from the GDP use have already been described above. Elements of peer learning, incorporation of home interests and behaviours, concepts of appropriate challenge. These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. They emerge not solely due to their embedded mediational potential within GDPs use, but as products of an expanded shared object of activity.
-<!-- The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies. -->
-
-
-<!-- they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency. -->
-
-
 ## Discussion
 
 This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
@@ -800,6 +771,13 @@ This discussion section discusses the complexity of the expanded object of activ
 This discussion begins to address the challenge of communicating the diverse mediational strategies and the movement of repertoires between activity systems.
 
 I then turn to the motivations and a synthesis  of an expanded concept of the object of activity involved. My attention returns to concepts of flow and computational fluency present in CGD&P research, suggesting an extension to include developing concepts of agency in the process.
+
+ADD THIS IN OR SIGNPOST?
+**GDPs as components of emerging repertoires in an evolving idioculture**
+
+The term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], can be applied to the role of GDPs as component parts in the emergence of a community culture.
+
+Other characteristics and norms of the emerging idioculture stemming which stem from the GDP use have already been described above. Elements of peer learning, incorporation of home interests and behaviours, concepts of appropriate challenge. These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. They emerge not solely due to their embedded mediational potential within GDPs use, but as products of an expanded shared object of activity.
 
 
 
@@ -1258,31 +1236,14 @@ The literature review outlined the potential of home interests as funds of knowl
 Video evidence indicated that conflicts involved between learner expectations and their technical abilities are helped by the use of the starting template. The
 constraints of provided game elements and implied narrative structure of the template accelerated the initial creative process.
 
-<!-- (like a  musical style from which to jam from, or provided constraints in a drama process which help guide improvisation.) -->
 
-One pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game. This process surfaced the expertise of the family as beekeepers, sparking interesting conversations with other participants.
 
-     var starttext = "This is a game which pits a honey bee against a swarm of Asian hornets,  which are alien invaders attacking bee  hives in the UK and which beekeepers are trying to stop spreading  here. Try to guide the bee to collect all the flowers without being caught by the hornets.
-     Use the arrow keys to move the bee. Press return to START.";
 
-<!-- In a noteworthy exchange a young participant Zi asks one of the grandparents of child if they had done any amazing things in their life. This exchange follows
-
-   zi: Have you done amazing things?
-
-The exchange seems to throw Pa but they draw Zi's attention back to the game. Showing that it demonstrates their interest in bees as they are beekeepers.
-
-The source of Pa's hesitancy to share more is not clear. However her willingness to share that part of her personal story via the narrative of the game is shown here as is the willingness of the young participant to ask about the personal experiences of the older participant during the process of peer testing her game. -->
 
 In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In subsequent post course interview Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." See Appendix 4.x (Mark and Ed working with home interests)
 
-<!-- The process of creating assets builds in Madiha the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
 
 
-
-<!-- NOTE
-NARRATIVE / drama IN PREVIOUS CHAPTER?
-how do these two sections work together? remove this one?
- -->
 <!-- The incorporation of the graphic was relatively quick and easy change to make the game but had a significant factor in the affect towards the game [erikssonUsingGameplayDesign2019;] BRING ON OTHER LITERATURE HERE ON PERSONAL EXPRESSION, FUNDS OF KNOWLEDGE IN THIS AREA. Roque, Scratch, Kafai, Gee etc. -->
 
 <!-- Ideally look for evidence of sharing in communities, especially developing processes, avoiding traps which sap momentum, -->
@@ -1397,9 +1358,32 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 
 [^fk]: see Vignette 6 and the later section of this chapter on repertoire use.
 
+
+[^pll]: REDUCE  - Chapter 5 outlines some of the processes introduced To help foster an  environment conducive to social interaction. I led by warm up games encourages playtesting time in the second half or each session. This playtesting time was open in scope allowed for natural play to emerge. Phase two and three in particular can be characterised as having a playful and social atmosphere.
+
+
+
 [^rpp]: The concept of repertoires of practice and how they move and transform as learners enter different spaces is outlined in Chapter 3 [@gutierrez_cultural_2003].
 
 [^fl]: Tehillah describes her final level which has only rewards and no hazards as a *"secret, special"* experience. Indicating that she is playing against the norms of platform game design in a way designed to provoke player surprise.
+
+[^mn]: See Vignette 4 for an overview of the use of game dynamic concepts within community interaction.
+
+[^mn]: see Vignette 5
+
+[^hi]: see Vignette 5
+
+[^cpp]: var starttext = "This is a game which pits a honey bee against a swarm of Asian hornets,  which are alien invaders attacking bee  hives in the UK and which beekeepers are trying to stop spreading  here. Try to guide the bee to collect all the flowers without being caught by the hornets. Use the arrow keys to move the bee.";
+
+[^vrc]: Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. See the reflective commentary "Peer propagation and community uptake of GDPs" in Vignette 1.
+
+[^udl]: This aligns with a key tenets of the inclusive pedagogy Universal Design for Learning (UDL). See Chapter 8 for a summary.
+
+[^pbl]: Research related to project based learning (PBL) benefits of working with participants' home interests with project work include to motivate participants in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], sustain activity and overcome problems in order to share the personalised object created [@barron_conceptualizing_2010; @barron_interest_2006-1].
+
+[^rep]: While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it is limited in the way it addresses aspect of choice when of drawing on home interests.
+
+
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
